# GTFS_UserGuide

./: .gitignore  README.md  article_documentation_section.md  netex_pt_formacao_plano.md  texto_artigo.ltx
PID-GTFS/: README.md  pyproject.toml
PID-GTFS/src/pid_gtfs/: exporter.py  importer.py
PID-GTFS/tests/: conftest.py  test_database.py  test_importer_exporter.py  test_schemas.py
exemplos/gtfs_feed_extracted/: feed_info.txt  shapes.txt  trips.txt
gtfs-pt-formacao/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
gtfs-pt-formacao/exemplos/rede_exemplo_portugal/: README.md
gtfs-pt-formacao/modulos/00_antes_de_comecar/: README.md
gtfs-pt-formacao/modulos/01_conceitos_base/: README.md
gtfs-pt-formacao/modulos/02_agencia_paragens_rotas/: README.md
gtfs-pt-formacao/modulos/03_viagens_horarios/: README.md
gtfs-pt-formacao/modulos/04_calendarios_excecoes/: README.md
gtfs-pt-formacao/modulos/05_acessibilidade_transferencias/: README.md
gtfs-pt-formacao/modulos/06_ciclo_vida_dados/: README.md
gtfs-pt-formacao/modulos/07_tarifas_extensoes/: README.md
gtfs-pt-formacao/modulos/08_ferramentas_praticas/: README.md
gtfs-pt-formacao/recursos/: comparacao_gtfs_netex.md  glossario.md  links_uteis.md
gtfs-pt-formacao/referencias/: README.md
netex-pt-formacao/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
netex-pt-formacao/recursos/: analise_projeto_frances.md  comparacao_gtfs_netex.md  glossario.md  links_uteis.md
netex-pt-formacao/referencias/: README.md
(+62 files in other folders)
