[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pid-gtfs"
version = "0.1.0"
description = "Standalone GTFS schemas, ingestion, and extraction library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PID-GTFS contributors" }]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pid_gtfs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
